@@ -18,14 +18,11 @@
 - (void)dealloc
 {
     [RTFSource release];
-    [URL release];
     [super dealloc];
 }
 
 - (void)setDataSource:(WebDataSource *)dataSource
 {
-    URL = [[[dataSource request] URL] retain];
-
     // FIXME: This is broken. [dataSource data] is incomplete at this point.
     hasRTFSource = [[[dataSource response] MIMEType] isEqualToString:@"text/rtf"];
     if (hasRTFSource){
@@ -70,7 +67,7 @@
 
 - (NSString *)title
 {
-    return [URL absoluteString];
+    return nil;
 }
 
 
